--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,4 @@
-[login]
-url = http://www.zimo.wiki:8080/yibinu-score-crawler/api/login
 [user]
-xh = 161105024
-pwd = 161105024
-address = 中国四川省成都市金牛区一环路北1段-129号-附9号
+xh = xxx #学号
+pwd = xxx #身份证后六位是初始密码
+address = 中国四川省成都市新都区
